graph now integrated in the app - still a bit buggy...

--- a/html/sandbox/graph.html
+++ b/html/sandbox/graph.html
@@ -93,7 +93,9 @@
 					,
 					{value: 16, label: 'Q1-14'}
 					/**/
-				]
+				],
+				ymin: null,
+				ymax: null
 			}
 			objTrendGraph.drawgraph(objData);
 
