new interpolation logic for simulator & bug fixes in graph

--- a/html/sandbox/interpolation.html
+++ b/html/sandbox/interpolation.html
@@ -18,11 +18,11 @@
 			}
 			
 #section1, #section2{
- width: 300px;
+ width: 500px;
 
 }
 #slidersales, #slidergreensales{
-	width: 250px;
+	width: 400px;
 }
 path#arc_path, circle#background, path#arc_path_left{
 	fill: none;
@@ -272,6 +272,7 @@ circle#background{
 					objSliders.vars.debug=true;
 					objSliders.vars.updatetrendgraph=false;
 					objSliders.vars.updatecurrent=true;
+					objSliders.vars.usebiliniarinterpolation=true;
 
 					self.start();
 
