Fixed issues with map (country info opens after drag)

--- a/html/index.html
+++ b/html/index.html
@@ -30,7 +30,7 @@
 			</div>
 			<div id="app_wrapper">
 				<div id="map">
-					<div id="main_wrapper">
+					<div id="main_wrapper" style="opacity: 1; display: block">
 						<div id="holder_1000">
 						</div>
 					</div>				
