--- a/html/index.html
+++ b/html/index.html
@@ -35,6 +35,7 @@
 						</div>
 					</div>				
 				</div>
+				
 				<div id="region_info" onclicks="objHeader.btnbackclick();">
 					<div id="region_info_wrapper">
 						<div class="svg_wrapper">
@@ -90,57 +91,52 @@
 							</div>					
 						</div>
 					</div>
-					<div id="region_history">
-						<!-- base svg construction for the line graph -->
-						<svg class="graph" id="graph" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewbox="0 0 400 300">
-							<g id="wrapper" transform="translate(0, 0)">
-								<text id="graph_title" y="15" x="0" xml:space="preserve">Trend</text>
+			
+				</div>
+				<div id="region_history">
+					<!-- base svg construction for the line graph -->
+					<svg class="graph" id="graph" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewbox="0 0 400 300">
+						<g id="wrapper" transform="translate(0, 0)">
+							<text id="graph_title" y="15" x="0" xml:space="preserve">Trend</text>
 
-								<g id="grid_wrapper"> </g>
+							<g id="grid_wrapper"> </g>
 
-								<!-- axis lines -->
-								<g class="axis_line">
-									<line id="x_axisline" x1="20" y1="10" x2="20" y2="280"/>
-								</g>
-								<g class="axis_line">
-									<line id="y_axisline" x1="20" y1="280" x2="370" y2="280"/>
-								</g>
-
-								<!-- axis labels -->
-								<g id="x_axislabel_wrapper" class="labels x-labels"> </g>
-								<g id="y_axislabel_wrapper" class="labels y-labels"> </g>
-
-								<!-- wrapper for the graph line -->
-								<g id="line_wrapper"> </g>
-
-								<!-- wrapper for the data points -->
-								<g id="data_point_wrapper" class="first_set points" data-setname="Our first data set"> </g>
-
-								<g id="popup_trend" transform="translate(18.882713,11.364596) scale(0.8)">
-									<path id="popup_trend_base" d="m 0.826235,89.47513 171.590555,0.3268 -0.3268,-60.78434 -13.0719,0 -17.97385,-28.10457 -17.32026,28.10457 c 0,0 -117.342689,-0.65359 -123.22398,-0.65359 z" />
-									<g id="popup_trend_text_wrapper">
-										<text id="popup_trend_number" y="55" x="160" xml:space="preserve">2,23</text>
-										<text id="popup_trend_text" y="75" x="160" xml:space="preserve">Million Lives Improved</text>
-									</g>
-								</g>
-
-								<g id="popup_value" onclick="objTrendGraph.showvaluepopup({show: false});" visibility="hidden">
-									<rect id="popup_value_base" width="54" height="54" x="0" y="0"/>
-									<text id="popup_value_number" y="20" x="27" xml:space="preserve">2,233</text>
-									<text id="popup_value_text" y="42" x="27" xml:space="preserve">Million</text>
-								</g>
+							<!-- axis lines -->
+							<g class="axis_line">
+								<line id="x_axisline" x1="20" y1="10" x2="20" y2="280"/>
+							</g>
+							<g class="axis_line">
+								<line id="y_axisline" x1="20" y1="280" x2="370" y2="280"/>
 							</g>
 
-						</svg>						
+							<!-- axis labels -->
+							<g id="x_axislabel_wrapper" class="labels x-labels"> </g>
+							<g id="y_axislabel_wrapper" class="labels y-labels"> </g>
 
+							<!-- wrapper for the graph line -->
+							<g id="line_wrapper"> </g>
 
-
-
-					</div>
-					<div id="slider_indicator"></div>
+							<!-- wrapper for the data points -->
+							<g id="data_point_wrapper" class="first_set points" data-setname="Our first data set"> </g>
+							<g id="popup_trend" transform="translate(18.882713,11.364596) scale(0.8)">
+								<path id="popup_trend_base" d="m 0.826235,89.47513 171.590555,0.3268 -0.3268,-60.78434 -13.0719,0 -17.97385,-28.10457 -17.32026,28.10457 c 0,0 -117.342689,-0.65359 -123.22398,-0.65359 z" />
+								<g id="popup_trend_text_wrapper">
+									<text id="popup_trend_number" y="55" x="160" xml:space="preserve">2,23</text>
+									<text id="popup_trend_text" y="75" x="160" xml:space="preserve">Million Lives Improved</text>
+								</g>
+							</g>
+							<g id="popup_value" onclick="objTrendGraph.showvaluepopup({show: false});" visibility="hidden">
+								<rect id="popup_value_base" width="54" height="54" x="0" y="0"/>
+								<text id="popup_value_number" y="20" x="27" xml:space="preserve">2,233</text>
+								<text id="popup_value_text" y="42" x="27" xml:space="preserve">Million</text>
+							</g>
+						</g>
+					</svg>						
 				</div>
+				<div id="slider_indicator"></div>
 				<div id="simulation">
 					<div id="simulation_wrapper">
+						<div id="show_simulation">Simulation</div>
 						<h3>Lives Improved Year End</h3>
 						<div id="section1">
 							<h4>Sales</h4>
@@ -164,7 +160,7 @@
 					<div id="simulation_error_wrapper">
 
 					</div>
-				</div>
+				</div>		
 			</div>
 			<div id="menu_bar">
 				<div id="btn_wrapper">
@@ -281,6 +277,7 @@
 		<script type="text/javascript" src="js/panels/bookmarks.js">//</script>
 		<script type="text/javascript" src="js/panels/explain.js">//</script>
 		<script type="text/javascript" src="js/panels/graph.js">//</script>
+		<script type="text/javascript" src="js/panels/loading.js">//</script>
 		
 		<!-- Elements -->
 		<script type="text/javascript" src="js/elements/mru_filter.js">//</script>
