new app icons & starting to implement full design implementation

--- a/html/index.html
+++ b/html/index.html
@@ -13,7 +13,7 @@
 		</script>		
 	</head>
 	<body>
-		<div id="app_panel" class="panel full">
+		<div id="app_panel" class="panel full" tabindex="-1">
 			<div id="title_bar">
 				<div id="btn_back" onclick="objHeader.btnbackclick();"></div>
 				<div id="info">
@@ -31,7 +31,7 @@
 			<div id="app_wrapper">
 				<div id="map">
 					<div id="main_wrapper" style="opacity: 1; display: block">
-						<div id="holder_1000">
+						<div id="holder_1000" style="opacity: 1">
 						</div>
 					</div>				
 				</div>
