--- a/html/sandbox/graph.html
+++ b/html/sandbox/graph.html
@@ -20,7 +20,7 @@
 
 	</head>
 	<body>
-		<div style="width: 800px; height: 600px">
+		<div style="width: 800px; height: 600px; border: 1px solid red">
 			<!-- base svg construction for the line graph -->
 			<svg class="graph" id="graph" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewbox="0 0 400 300">
 				<g id="wrapper" transform="translate(0, 0)">
