--- a/html/index.html
+++ b/html/index.html
@@ -42,7 +42,7 @@
 								
 								<div class="svg_wrapper">
 									<div id="holder">
-										<svg id="svg_circle" xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="100%" viewBox="0 0 640 300">
+										<svg id="svg_circle" xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="100%" viewBox="0 0 640 300"  preserveAspectRatio="xMidYMid meet">
 											<g id="g" fill="none" transform="translate(0,0)" style="text-anchor: middle;">
 												<circle id="background" width="100" cx="150" cy="50" r="100" />
 												<path id="arc_path" />
@@ -77,7 +77,7 @@
 					<div id="bottom_panel">
 						<div id="region_history">
 							<!-- base svg construction for the line graph -->
-							<svg class="graph" id="graph" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewbox="0 0 400 300" preserveAspectRatio="none">
+							<svg class="graph" id="graph" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewbox="0 0 640 300" preserveAspectRatio="xMidYMid meet">
 								<g id="wrapper" transform="translate(0, 0)">
 									<text id="graph_title" y="15" x="0" xml:space="preserve">Trend</text>
 		
