--- a/html/sandbox/graph.html
+++ b/html/sandbox/graph.html
@@ -22,7 +22,7 @@
 	<body>
 		<div style="width: 100%; height: 100%; border: 1px solid red">
 			<!-- base svg construction for the line graph -->
-			<svg class="graph" id="graph" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewbox="0 0 400 300">
+			<svg class="graph" id="graph" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewbox="0 0 400 300" preserveAspectRatio="xMidYMid meet">
 				<g id="wrapper" transform="translate(0, 0)">
 					<text id="graph_title" y="15" x="0" xml:space="preserve">Trend</text>
 
