--- a/html/sandbox/graph.html
+++ b/html/sandbox/graph.html
@@ -47,7 +47,7 @@
 					<g id="y_axislabel_wrapper" class="labels y-labels"> </g>
 
 
-					<g id="popup_trend" transform="translate(18.882713,11.364596)">
+					<g id="popup_trend" transform="">
 						<!--
 						<path id="popup_trend_base" d="m 0.826235,89.47513 171.590555,0.3268 -0.3268,-60.78434 -13.0719,0 -17.97385,-28.10457 -17.32026,28.10457 c 0,0 -117.342689,-0.65359 -123.22398,-0.65359 z" />
 					-->
@@ -56,18 +56,18 @@
 						   id="popup_trend_base"
 						   style="fill:#00454a" />
 						<g id="popup_trend_text_wrapper">
-							<text id="popup_trend_number" y="55" x="160" xml:space="preserve">2,23</text>
-							<text id="popup_trend_text" y="75" x="160" xml:space="preserve">Million Lives Improved</text>
+							<text id="popup_trend_number" y="23" x="60" xml:space="preserve">2,23</text>
+							<text id="popup_trend_text" y="40" x="103" xml:space="preserve">Million Lives Improved</text>
 						</g>
 					</g>
 
-					<g id="popup_value" onclick="objTrendGraph.showvaluepopup({show: false});" visibility="hidden">
-						<path
-						   d="M 50,25.279 C 50,11.470998 38.808,0.2789983 25,0.2789983 11.193,0.2789983 0,11.470998 0,25.279 c 0,9.007 4.7660001,16.899 11.911,21.3 L 25.332,60 40.246,45.086 C 46.176,40.514 50,33.344 50,25.279 z"
-						   id="popup_value_base" />
-						<text id="popup_value_number" y="20" x="27" xml:space="preserve">2,233</text>
-						<text id="popup_value_text" y="42" x="27" xml:space="preserve">Million</text>
-					</g>
+									<g id="popup_value" onclick="objTrendGraph.showvaluepopup({show: false});" visibility="hidden">
+										<path
+										   d="M 50,25.279 C 50,11.470998 38.808,0.2789983 25,0.2789983 11.193,0.2789983 0,11.470998 0,25.279 c 0,9.007 4.7660001,16.899 11.911,21.3 L 25.332,60 40.246,45.086 C 46.176,40.514 50,33.344 50,25.279 z"
+										   id="popup_value_base"  transform="scale(1.2)"/>
+										<text id="popup_value_number" y="23" x="29" xml:space="preserve">2,233</text>
+										<text id="popup_value_text" y="41" x="29" xml:space="preserve">Million</text>
+									</g>
 
 
 				</g>
@@ -79,6 +79,8 @@
 		</div>
 
 		<script type="text/javascript" src="../js/panels/graph.js">//</script>
+		<script type="text/javascript" src="../js/panels/map.js">//</script>
+		<script type="text/javascript" src="../js/helpers/utils.js">//</script>
 		<script>
 
 
@@ -103,7 +105,7 @@
 					,
 					{value: 13, label: 'Q4-13'}
 					,
-					{value: 6, label: 'Q1-14'}
+					{value: 4, label: 'Q1-14'}
 					/**/
 				],
 				ymin: null,
