added apply filter button and changed font for breadcrumb

--- a/html/index.html
+++ b/html/index.html
@@ -180,6 +180,7 @@
 			<div class="panel_header">
 				<h2>Filters</h2>
 				<div id="btn_close_filter" class="btn btn_close" onclick="objFilter.hide();">X</div>
+				<div id="btn_apply_filter" class="btn btn_apply" onclick="objFilter.applyfilter();">Apply</div>
 			</div>	
 			<div class="modal_content">
 				<h4>Select geography filter:</h4>
