small visual changes in the graph and a "hidden" circle that acts as a hit area for the value popups

--- a/html/sandbox/graph.html
+++ b/html/sandbox/graph.html
@@ -56,7 +56,7 @@
 						   id="popup_trend_base"
 						   style="fill:#00454a" />
 						<g id="popup_trend_text_wrapper">
-							<text id="popup_trend_number" y="23" x="60" xml:space="preserve">2,23</text>
+							<text id="popup_trend_number" y="26" x="60" xml:space="preserve">2,23</text>
 							<text id="popup_trend_text" y="40" x="103" xml:space="preserve">Million Lives Improved</text>
 						</g>
 					</g>
@@ -71,7 +71,12 @@
 
 
 				</g>
+<circle cx="200" cy="200" r="20" data-value="28.88" data-label="Q1 2013" onclick="objTrendGraph.showvaluepopup({show: true, x: 261.66666666666663, y: 238.7109634551495, value: '28.88', label: 'Q1 2013'})" style="fill: transparent">
 
+</circle>
+<circle cx="200" cy="200" r="5" data-value="28.88" data-label="Q1 2013" onclick="objTrendGraph.showvaluepopup({show: true, x: 261.66666666666663, y: 238.7109634551495, value: '28.88', label: 'Q1 2013'})" style="stroke: white; stroke-width: 3;">
+
+</circle>
 			</svg>
 		</div>
 		<div style="display: none">
