thumb styling in sliders

--- a/html/sandbox/interpolation.html
+++ b/html/sandbox/interpolation.html
@@ -12,7 +12,7 @@
 		<script type="text/javascript" src="../js/panels/sliders.js">//</script>
 		<script type="text/javascript" src="../js/panels/loading.js">//</script>
 
-		<style>
+		<style type="text/css">
 
 			body {
 				background-color: white;
@@ -74,14 +74,12 @@ circle#background{
 
 div #simulation_wrapper input[type='range']::-webkit-slider-thumb {  
     -webkit-appearance: none!important;
-    /*
-    width: 20px;
-    height: 20px;
-    */
-    border: 40px solid #ededed;
-    -webkit-border-radius: 40px;
-    border-radius: 40px;
-    background-color: #fff;
+    width: 40px;
+    height: 40px;
+    border: 1px solid red;
+    /*-webkit-border-radius: 40px;
+    border-radius: 40px;*/
+    /*background-color: #fff;*/
 
 	background-image: url('../img/slider_thumb.svg');	
 	background-size: auto 100%!important;
