test to improve scaling on desktop/ipad

--- a/html/index.html
+++ b/html/index.html
@@ -42,7 +42,7 @@
 								
 								<div class="svg_wrapper">
 									<div id="holder">
-										<svg id="svg_circle" xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="100%" viewBox="0 0 640 300"  preserveAspectRatio="xMidYMid meet">
+										<svg id="svg_circle" xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="100%" viewBox="0 0 640 300"  preserveAspectRatio="xMidYMin meet">
 											<g id="g" fill="none" transform="translate(0,0)" style="text-anchor: middle;">
 												<circle id="background" width="100" cx="150" cy="125" r="100" />
 												<path id="arc_path" />
@@ -75,9 +75,9 @@
 						</div>					
 						<div id="region_history">
 							<!-- base svg construction for the line graph -->
-							<svg class="graph" id="graph" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewbox="0 0 640 300" preserveAspectRatio="xMidYMid meet">
+							<svg class="graph" id="graph" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewbox="0 0 640 300" preserveAspectRatio="xMidYMin meet">
 								<g id="wrapper" transform="translate(0, 0)">
-									<text id="graph_title" y="15" x="0" xml:space="preserve">Trend</text>
+									<text id="graph_title" y="30" x="0" xml:space="preserve">Trend</text>
 		
 									<g id="grid_wrapper"> </g>
 		
