first login message

--- a/html/index.html
+++ b/html/index.html
@@ -228,6 +228,17 @@
 				</div>			
 			</div>			
 		</div>
+		<div id="first_login_panel" class="panel modal">
+			<div class="panel_header">
+				<h2>Welcome</h2>
+				<div id="btn_close_explain" class="btn btn_close" onclick="objFirstLogin.hide();">X</div>
+			</div>
+			<div class="modal_content">
+				<div id="first_login_content">
+				
+				</div>			
+			</div>			
+		</div>		
 		<div id="bookmarks_panel" class="panel modal">
 			<div class="panel_header">
 				<h2>Bookmarks</h2>
@@ -291,6 +302,7 @@
 		<script type="text/javascript" src="js/panels/explain.js">//</script>
 		<script type="text/javascript" src="js/panels/graph.js">//</script>
 		<script type="text/javascript" src="js/panels/loading.js">//</script>
+		<script type="text/javascript" src="js/panels/first_login.js">//</script>
 		
 		<!-- Elements -->
 		<script type="text/javascript" src="js/elements/mru_filter.js">//</script>
