--- a/html/data/firstlogin.html
+++ b/html/data/firstlogin.html
@@ -19,5 +19,5 @@ The bottom of the screen shows a bar with four icons:<br/>
 -	The bookmarks icon (heart) lets you save your favorite views (geography and Philips reporting unit)<br/>
 -	The filter icon lets you select the level of geographical breakdown, i.e. Lives Improved for the whole world or per country, and the Philips reporting unit, i.e. the whole Philips group or a specific BU.<br/>
 -	In the FAQ sections contains answers to the most frequently asked questions. For more information you can always email <h href="mailto:sustainability@philips.com">sustainability@philips.com</a><br/>
--	The logout icon which will log your account out of the app
+-	The logout icon which will log your account out of the app gfd gdggdfgdfg dg dfg fd gdfgdf 
 </p>
