panels with swipe, fixed errors and bugs

--- a/html/index.html
+++ b/html/index.html
@@ -285,7 +285,7 @@
 		</div>
 		<div id="loading"></div>
 		<div id="producttree_temp"></div>
-		<div id="error" onclick="hideErrorDiv();"></div>
+		<div id="error"></div>
 		
 		<!-- Config files -->
 		<script type="text/javascript" src="js/config.js">//</script>
