app now dynamically loads resources based upon: 1) domain name - run index.html on a website and the app will load from the local server 2) run on web server with query string ?sitetype=prod|dev|johan|rutger - then the resources will be loaded from the indicated server 3) run dev.html, johan.html or rutger.html inside the cordova app to facilitate debugging on a local machine (assets will be pulled from development server)
in data/body_content.html contains the body content of the app. It will be pulled in automatically when loading the app and injected in the body of the index|johan|rutger|dev.html page

--- a/html/dev.html
+++ b/html/dev.html
@@ -31,7 +31,7 @@
 				loadRemoteFile(arrJsResources[i])
 			}
 		</script>
-		<div id="content_outer_wrapper">.</div>
+		<div id="content_outer_wrapper">loading...</div>
 		<script type="text/javascript">
 
 			function startApplication(){
