--- a/html/rutger.html
+++ b/html/rutger.html
@@ -31,7 +31,7 @@
 				loadRemoteFile(arrJsResources[i])
 			}
 		</script>
-		<div id="content_outer_wrapper">.</div>
+		<div id="content_outer_wrapper">loading...</div>
 		<script type="text/javascript">
 
 			function startApplication(){
