--- a/html/index.html
+++ b/html/index.html
@@ -36,40 +36,8 @@
 		</script>
 		<div id="content_outer_wrapper">.</div>
 		<script type="text/javascript">
-
-			//starts the application logic if the app object is available (loaded dynamically)
-			function startApplication(){
-				//console.log('testing')
-				if(typeof app != 'undefined' &&
-					typeof objUtils != 'undefined' &&
-					typeof objStore != 'undefined' &&
-					typeof objInfographic != 'undefined' &&
-					typeof objFooter != 'undefined' &&
-					typeof objHeader != 'undefined' &&
-					typeof objMap != 'undefined' &&
-					typeof objOverlay != 'undefined' &&
-					typeof objRegionInfo != 'undefined' &&
-					typeof objSliders != 'undefined' &&
-					typeof objLogin != 'undefined' &&
-					typeof objError != 'undefined' &&
-					typeof objFilter != 'undefined' &&
-					typeof objBookmarks != 'undefined' &&
-					typeof objTrendGraph != 'undefined' &&
-					typeof objExplain != 'undefined' &&
-					typeof objLoading != 'undefined' &&
-					typeof objFirstLogin != 'undefined' &&
-					typeof objMruFilter != 'undefined' &&
-					typeof objOruFilter != 'undefined'
-				){
-					app.init();
-				}else{
-					window.setTimeout(function(){startApplication();},500);
-				}
-			}
-
 			//attempt to start the application logic
-			startApplication();
-			
+			objConfig.startapplication();
 		</script>
 	</body>
 </html>
