transparent overlay at first load + hiding graph when loading + wish from niels: showing < 1% instead of 0%

--- a/html/data/body_content.html
+++ b/html/data/body_content.html
@@ -266,3 +266,4 @@
 <div id="loading"></div>
 <div id="producttree_temp"></div>
 <div id="error"></div>
+<div id="transparentlayer" onclick="app.hidetransparentlayer()"></div>
